src/test/ui/const-generics/const-param-before-other-params.full.stderr
error: lifetime parameters must be declared prior to const parameters
  --> $DIR/const-param-before-other-params.rs:5:21
   |
LL | fn bar<const X: (), 'a>(_: &'a ()) {
   |       --------------^^- help: reorder the parameters: lifetimes, then consts and types: `<'a, const X: ()>`

error: aborting due to previous error

